--- a/src/components/styles.module.scss
+++ b/src/components/styles.module.scss
@@ -83,12 +83,15 @@ header {
 
 .mainGrid {
   padding: 20px;
-  display: grid;
-  grid-template-rows: 500px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-column-gap: 1rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
 
   > div {
+    height: 500px;
+    width: 33%;
+    min-width: 200px;
+    margin: auto;
     border-radius: 10px;
     background: var(--black);
 
