--- a/src/components/styles.module.scss
+++ b/src/components/styles.module.scss
@@ -6,35 +6,50 @@
   --darkGray: #b9b9b9;
 }
 
-.btn {
-  border-radius: 3px;
-  padding: 10px;
-  border: none;
-  display: inline-block;
-  background: var(--gray);
-  font-size: 14px;
-  font-weight: bold;
-
-  &.btnSignup {
-    background:var(--blue);
-    color: #fff;
-  }
-}
-
-header {
+.header {
   padding: 20px 20px;
-  display: grid;
-  grid-template-columns: minmax(300px, 1fr) repeat(2, minmax(75px, 100px)) 50px;
-  grid-column-gap: 1rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 
-  input[type='search'] {
-    background: var(--gray);
-    font-size: 14px;
-    font-weight: bold;
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    width: 100%;
+  .search {
+    flex-grow: 2;
+    margin-right:10px;
+
+    input[type='search'] {
+      background: var(--gray);
+      font-size: 14px;
+      font-weight: bold;
+      padding: 10px;
+      border: none;
+      border-radius: 3px;
+      width: 100%;
+    }
+  }
+
+  .buttons {
+    flex-grow: 1;
+    max-width: 200px;
+
+    .btn {
+      border-radius: 3px;
+      padding: 10px;
+      border: none;
+      display: inline-block;
+      background: var(--gray);
+      font-size: 14px;
+      font-weight: bold;
+      margin-right: 10px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &.btnSignup {
+        background:var(--blue);
+        color: #fff;
+      }
+    }
   }
 
   .results {
@@ -85,13 +100,13 @@ header {
   padding: 20px;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 
   > div {
     height: 500px;
-    width: 33%;
-    min-width: 200px;
-    margin: auto;
+    flex-grow: 1;
+    min-width: 100px;
+    max-width: 400px;
     border-radius: 10px;
     background: var(--black);
 
